--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,20 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
+    "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
+    "module": "esnext",
+    "target": "es2015",
+    "moduleResolution": "node",
+    "jsx": "preserve",
+    "strict": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "declarationDir": "types",
+    "types": ["unplugin-vue-define-options", "node"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "paths": {
       "@/*": ["./src/*"]
     }
